# practice_project

./: .gitignore  main.py  preprocessing.ipynb  pyproject.toml  topic.ipynb
Final/: 01_preprocessed_final.ipynb  02_eda_final.ipynb  03_analysis_final.ipynb  03_analysis_final_로지스틱추가.ipynb  analysis_final.ipynb  eda_final.ipynb
Myun_EDA/: 01_preprocessed_final.ipynb  03_analysis_final.ipynb  03_analysis_final_mine.ipynb  03_analysis_final_mydraft.ipynb  advanced_analysis.ipynb  analysis.ipynb  eda.ipynb  eda_myun.ipynb  eda_myun_draft.ipynb  preprocess_fin.ipynb  preprocessed_final.ipynb  preprocessing.ipynb  preprocessing_debugging.ipynb  stage1 copy.ipynb  stage2 copy.ipynb  stage4 copy.ipynb
Soohan_EDA/: 1.ipynb  2.ipynb
Soyun_EDA/: 5대지표 생성.ipynb  analysis_최종.ipynb  eda.ipynb  eda_최종.ipynb  preprocessed_fin.ipynb  preprocessed_final_내꺼.ipynb  preprocessed_최종.ipynb  preprocessing.ipynb  stage1.ipynb  stage2.ipynb  stage3.ipynb  stage4.ipynb  starbucks_project_plan.md  과정.md  전처리.ipynb
backup/: 03_analysis_final.ipynb
chanhui_EDA/: EDA_1.ipynb  adff.ipynb  pre_eda.ipynb  preprocess_EDA.ipynb  preprocessed_fin.ipynb
chanhui_EDA/eda/: EDA_1.ipynb  preprocess_EDA.ipynb  preprocessed_fin.ipynb  preprocessed_final.ipynb
chanhui_EDA/final_analysis/: 02_eda_final.ipynb  (+8 more)
dataset/: starbucks_menu_260112.csv
pjh_EDA/: 01_preprocess.ipynb  02_eda.ipynb  03_funnel_pipeline.ipynb  04_analysis_original.ipynb  analysis_final.ipynb  eda_pjh.ipynb  funnel_1.ipynb  funnel_pjh.ipynb  preprocessed_final.ipynb  preprocessing.ipynb  preprocessing_pjh.ipynb  study_pjh.ipynb
(+3 files in other folders)
